# prototype-ff01

./: .gitignore  Cargo.toml  backend-run.sh  client-run.sh  client.py  display-chart.py  display-weights.py  example.parqet  example2.parquet  shell.nix  show-chart.sh  unpack-archive.py  unpack_qts.py  weights.csv
backend/: Cargo.toml
backend/src/: main.rs  plate_detect_task.rs  scales.rs  xtrem.rs
chart/: bounds.py  logs.py  main.py  plates.py  states.py  utils.py  weights.py
client/: archive.py  live_data.py  main.py  main_2.py  main_old.py  styles.tcss
client-simulator/: Cargo.toml
client-simulator/src/: main.rs
client/assets/: styles.css
client/chart/: __init__.py  bounds.py  colors.py  logs.py  main.py  plates.py  states.py  utils.py  weights.py
client/pages/: archive.py  live_data.py  menu.py  sync.py
client/utils/: archive_parser.py
fragment-derive/: Cargo.toml
fragment-derive/src/: lib.rs
machine/: Cargo.toml
machine-simulator/: Cargo.toml
machine-simulator/src/: main.rs
machine/src/: main.rs  plate_detect_task.rs  scales.rs
machine/src/service/: mod.rs  worker.rs
machine/src/service/state/: state_0.rs  state_2.rs
machine/testing/: simulator.rs
nixos/: configuration.nix
schema/: archive.yaml
schema_derive/: Cargo.toml
schema_derive/src/: lib.rs
schemas/: telemetry.ini
simulation/: Cargo.toml
src/: logging.rs  main.rs  plate_detect_task.rs  plate_task.rs  scales.rs  telemetry.rs  telemetry_old.rs
telemetry/: Cargo.toml  some.rs
telemetry-3/: Cargo.toml
telemetry-archive/: Cargo.toml
telemetry-archive/src/: archive.rs  fragment.rs  fragment_registry.rs  lib.rs  manager.rs  schema.rs  tier_registry.rs  types.rs
telemetry-archive/src/archive/: mod.rs
telemetry-archive/src/io/: reader.rs  stitcher.rs  writer.rs
telemetry-client/: CMakeLists.txt  archive.py  live_data.py  main.cpp  main.py  main.qml  resources.qrc
telemetry-client/chart/: logs.py  main.py  utils.py
telemetry-client/components/: InfoBox.qml
telemetry-core/: Cargo.toml
telemetry-events/: Cargo.toml
telemetry-final/: Cargo.toml
telemetry-journal/: Cargo.toml
telemetry-server/: Cargo.toml
telemetry-server/src/: cache.rs  config.rs  ingest.rs  live.rs  main.rs  query.rs  query_old.rs  query_server.rs  recorder.rs  utils.rs
telemetry-server/src/query/: args.rs  http.rs  logs.rs  mod.rs  orders.rs  plates.rs  responses.rs  sql.rs  utils.rs  weights.rs
testing/: populate-sandbox.py  run_server.sh  run_simulation.sh  telemetry-simulator.sh
(+93 files in other folders)
