[package]
name = "telemetry-server"
version = "0.1.0"
edition = "2024"

[dependencies]
telemetry-core = { path = "../telemetry-events" }

chrono="0.4.44"
duckdb={ version = "1.0.0" }

anyhow="1.0.102"
postcard="1.1.3"
serde="1.0.228"

heapless={ version = "0.9.1", features = [] }

arrow="58.2.0"

crossbeam="0.8.4"

arc-swap="1.9.1"